<resources>
    <string name="app_name">SharedElementTransitionDemo</string>
    <string name="fragment">Fragment</string>
    <string name="activity_one">Activity One</string>
    <string name="activity_two">Activity Two</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="picasso">Picasso</string>
    <string name="glide">Glide</string>
    <string name="recyclerview_activity">ARecyclerview</string>
    <string name="recyclerview_fragment">FRecyclerview</string>
</resources>
